feat: деплой на pages в случае успешного прохождения линтера

--- a/.github/workflows/buildpage.yml
+++ b/.github/workflows/buildpage.yml
@@ -28,3 +28,9 @@ jobs:
         run: make lint
       # - name: Run tests
       #   run: make test
+  deploy:
+    needs: build
+    runs-on: ubuntu-latest
+    steps:
+      - name: Deploy
+        run: make gh-deploy
