--- a/.github/workflows/buildpage.yml
+++ b/.github/workflows/buildpage.yml
@@ -32,5 +32,8 @@ jobs:
     needs: build
     runs-on: ubuntu-latest
     steps:
+      - uses: actions/setup-node@v2
+        with:
+          node-version: 18.x
       - name: Deploy
         run: make gh-deploy
