--- a/.github/workflows/buildpage.yml
+++ b/.github/workflows/buildpage.yml
@@ -32,7 +32,9 @@ jobs:
     needs: build
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/setup-node@v2
+      - uses: actions/checkout@v2
+      - name: Use Node.js 18.x
+        uses: actions/setup-node@v2
         with:
           node-version: 18.x
       - name: Deploy
