feat: добавляет установку проекта чтобы можно было использовать gh-pages

--- a/.github/workflows/buildpage.yml
+++ b/.github/workflows/buildpage.yml
@@ -38,4 +38,4 @@ jobs:
         with:
           node-version: 18.x
       - name: Deploy
-        run: make gh-deploy
+        run: make install gh-deploy
