--- a/.github/workflows/buildpage.yml
+++ b/.github/workflows/buildpage.yml
@@ -14,14 +14,14 @@ jobs:
 
     strategy:
       matrix:
-        node-version: [16.x, 17.x, 18.x]
+        node-version: [18.x, 20.x]
 
     steps:
       - uses: actions/checkout@v2
-      - name: Use Node.js ${{ matrix.node-version}}
+      - name: Use Node.js ${{ matrix.node-version }}
         uses: actions/setup-node@v2
         with:
-          node-version: ${{ matrix.node-version}}
+          node-version: ${{ matrix.node-version }}
       - name: Install
         run: make install
       - name: Run linter
@@ -33,9 +33,9 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v2
-      - name: Use Node.js 18.x
+      - name: Use Node.js 20.x
         uses: actions/setup-node@v2
         with:
-          node-version: 18.x
+          node-version: 20.x
       - name: Deploy
-        run: make install gh-deploy
+        run: npx gh-deploy -d build --cname trailprotection.ru -u Danil Volkov volchara287@gmail.com
