--- a/.github/workflows/buildpage.yml
+++ b/.github/workflows/buildpage.yml
@@ -37,5 +37,7 @@ jobs:
         uses: actions/setup-node@v2
         with:
           node-version: 20.x
+      - name: Install Deps
+        run: make install
       - name: Deploy
         run: npx gh-deploy -d build --cname trailprotection.ru -u Danil Volkov volchara287@gmail.com
