--- a/.github/workflows/buildpage.yml
+++ b/.github/workflows/buildpage.yml
@@ -17,11 +17,12 @@ jobs:
         node-version: [18.x, 20.x]
 
     steps:
-      - uses: actions/checkout@v2
+      - uses: actions/checkout@v3
       - name: Use Node.js ${{ matrix.node-version }}
-        uses: actions/setup-node@v2
+        uses: actions/setup-node@v3
         with:
           node-version: ${{ matrix.node-version }}
+          cache: 'npm'
       - name: Install
         run: make install
       - name: Run linter
@@ -32,12 +33,12 @@ jobs:
     needs: build
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/checkout@v2
-      - name: Use Node.js 20.x
-        uses: actions/setup-node@v2
+      - uses: actions/checkout@v3
+      - name: Use Node.js
+        uses: actions/setup-node@v3
         with:
-          node-version: 20.x
-      - name: Install Deps
-        run: make install
+          node-version: '20.x'
+          cache: 'npm'
+      - run: make install
       - name: Deploy
         run: npx gh-deploy -d build --cname trailprotection.ru -u Danil Volkov volchara287@gmail.com
