--- a/.github/workflows/buildpage.yml
+++ b/.github/workflows/buildpage.yml
@@ -11,17 +11,12 @@ on:
 jobs:
   build:
     runs-on: ubuntu-latest
-
-    strategy:
-      matrix:
-        node-version: [18.x, 20.x]
-
     steps:
       - uses: actions/checkout@v3
-      - name: Use Node.js ${{ matrix.node-version }}
+      - name: Use Node.js 20.x
         uses: actions/setup-node@v3
         with:
-          node-version: ${{ matrix.node-version }}
+          node-version: 20.x
           cache: 'npm'
       - name: Install
         run: make install
@@ -29,16 +24,6 @@ jobs:
         run: make lint
       # - name: Run tests
       #   run: make test
-  deploy:
-    needs: build
-    runs-on: ubuntu-latest
-    steps:
-      - uses: actions/checkout@v3
-      - name: Use Node.js
-        uses: actions/setup-node@v3
-        with:
-          node-version: '20.x'
-          cache: 'npm'
-      - run: make install
+      - run: make install build
       - name: Deploy
         run: npx gh-pages -d build --cname trailprotection.ru -u "Danil Volkov <volchara287@gmail.com>"
