--- a/.github/workflows/buildpage.yml
+++ b/.github/workflows/buildpage.yml
@@ -24,6 +24,6 @@ jobs:
         run: make lint
       # - name: Run tests
       #   run: make test
-      - run: make install build
+      - run: make build
       - name: Deploy
         run: npx gh-pages -d build --cname trailprotection.ru -u "Danil Volkov <volchara287@gmail.com>"
