--- a/.github/workflows/buildpage.yml
+++ b/.github/workflows/buildpage.yml
@@ -26,4 +26,4 @@ jobs:
       #   run: make test
       - run: make build
       - name: Deploy
-        run: npx gh-pages -d build --cname trailprotection.ru -u "Danil Volkov <volchara287@gmail.com>"
+        run: npx gh-pages -d build --cname trailprotection.ru -u "VolkovDani <volchara287@gmail.com>"
