--- a/.github/workflows/buildpage.yml
+++ b/.github/workflows/buildpage.yml
@@ -25,5 +25,11 @@ jobs:
       # - name: Run tests
       #   run: make test
       - run: make build
-      - name: Deploy
-        run: npx gh-pages -d build --cname trailprotection.ru -u "VolkovDani <volchara287@gmail.com>"
+      - name: Deploy with gh-pages
+        run: |
+          git remote set-url origin https://git:${GITHUB_TOKEN}@github.com/${GITHUB_REPOSITORY}.git
+          npx gh-pages -d build --cname trailprotection.ru -u "Danil Volkov <volchara287@gmail.com>"
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+      # - name: Deploy
+      #   run: npx gh-pages -d build --cname trailprotection.ru -u "VolkovDani <volchara287@gmail.com>"
