--- a/.github/workflows/buildpage.yml
+++ b/.github/workflows/buildpage.yml
@@ -28,7 +28,7 @@ jobs:
       - name: Deploy with gh-pages
         run: |
           git remote set-url origin https://git:${GITHUB_TOKEN}@github.com/${GITHUB_REPOSITORY}.git
-          npx gh-pages -d build --cname trailprotection.ru -u "Danil Volkov <volchara287@gmail.com>"
+          npx gh-pages -d build --cname trailprotection.ru -u "github-actions-bot <support+actions@github.com>"
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
       # - name: Deploy
