--- a/.github/workflows/buildpage.yml
+++ b/.github/workflows/buildpage.yml
@@ -27,7 +27,7 @@ jobs:
       - run: make build
       - name: Deploy with gh-pages
         run: |
-          git remote set-url origin https://git:${GITHUB_TOKEN}@github.com/${GITHUB_REPOSITORY}.git
+          git remote set-url origin https://git:${GITHUB_TOKEN}@github.com/${GITHUB_REPOSITORY}
           npx gh-pages -d build --cname trailprotection.ru -u "github-actions-bot <support+actions@github.com>"
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
