--- a/.github/workflows/buildpage.yml
+++ b/.github/workflows/buildpage.yml
@@ -28,7 +28,7 @@ jobs:
       - name: Deploy
         uses: peaceiris/actions-gh-pages@v4
         with:
-          github_token: ${{ secrets.GITHUB_TOKEN }}
+          personal_token: ${{ secrets.GH_PAGES_TOKEN }}
           publish_dir: ./build
           cname: trailprotection.ru
       # - name: Deploy with gh-pages
