--- a/.github/workflows/buildpage.yml
+++ b/.github/workflows/buildpage.yml
@@ -29,6 +29,16 @@ jobs:
     needs: build
     runs-on: ubuntu-latest
     steps:
+      - uses: actions/checkout@v3
+      - name: Use Node.js 20.x
+        uses: actions/setup-node@v3
+        with:
+          node-version: 20.x
+          cache: 'npm'
+      - name: Install
+        run: make install
+      - name: Build
+        run: make build
       - name: Deploy
         uses: peaceiris/actions-gh-pages@v4
         with:
